noinst_LIBRARIES=libkorva-upnp-backend.a
libkorva_upnp_backend_a_SOURCES=\
	korva-upnp-device.c \
	korva-upnp-device.h \
	korva-upnp-device-lister.c \
	korva-upnp-device-lister.h \
	korva-upnp-file-server.c \
	korva-upnp-file-server.h \
	korva-upnp-metadata-query.c \
	korva-upnp-metadata-query.h

libkorva_upnp_backend_a_CFLAGS = -I$(srcdir)/.. $(GUPNP_CFLAGS)
